overflow fixed

--- a/mtk/public/css/mtg.css
+++ b/mtk/public/css/mtg.css
@@ -37,9 +37,6 @@
   margin: 0;
   padding: 0;
 }
-html, body{
-  overflow: hidden;
-}
 
 body {
   display: grid;
